Criação do conteúdo base de informação.

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css" />
     <title>Projeto Portifólio</title>
   </head>
   <body>
-    <header class="header_top"> 
+    <header class="header_top">
       <div class="header_left">
         <h1>Pricila Mayara Rocha dos Santos</h1>
         <h2>Estudante de Tecnologia</h2>
@@ -20,8 +20,64 @@
         </p>
       </div>
       <div class="header_right">
-          <img src="./assets/profile.jpg" alt="Pricila Mayara">
+        <img src="./assets/profile.jpg" alt="Pricila Mayara" />
       </div>
     </header>
+    <section class="middle">
+      <section class="experience">
+        <h1>Work Experience</h1>
+        <div class="job_1">
+          <h2>Auxiliar de Logística</h2>
+          <h3>09/2020 - Atual | NOVO MIX ATACADO DE ALIMENTOS</h3>
+          <ul>
+            <li>Atividade 1</li>
+            <li>Atividade 2</li>
+            <li>Atividade 3</li>
+            <li>Atividade 4</li>
+            <li>Atividade 5</li>
+          </ul>
+        </div>
+        <div class="job_2">
+          <h2>Aprendiz Administrativo Logístico</h2>
+          <h3>01/2018 - 06/2019 | KIMBERLY-CLARK</h3>
+          <ul>
+            <li>Atividade 1</li>
+            <li>Atividade 2</li>
+            <li>Atividade 3</li>
+            <li>Atividade 4</li>
+            <li>Atividade 5</li>
+          </ul>
+        </div>
+      </section>
+      <div class="line"></div>
+      <div>
+        <section class="education">
+          <h1>Education</h1>
+          <div class="education_1">
+            <h2>Engenharia de Produção</h2>
+            <h3>04/2017 - Atual | UNINTER</h3>
+            <ul>
+              <li>Disciplina 1</li>
+              <li>Disciplina 2</li>
+              <li>Disciplina 3</li>
+              <li>Disciplina 4</li>
+              <li>Disciplina 5</li>
+            </ul>
+          </div>
+        </section>
+        <section class="skills">
+          <h1>Skills</h1>
+          <div class="skills_1">
+            <ul>
+              <li>Proatividade</li>
+              <li>Trabalho em equipe</li>
+              <li>Criatividade</li>
+              <li>Disciplina</li>
+              <li>Comunicação</li>
+            </ul>
+          </div>
+        </section>
+      </div>
+    </section>
   </body>
 </html>
