--- a/index.html
+++ b/index.html
@@ -8,76 +8,78 @@
     <title>Projeto Portifólio</title>
   </head>
   <body>
-    <header class="header_top">
-      <div class="header_left">
-        <h1>Pricila Mayara Rocha dos Santos</h1>
-        <h2>Estudante de Tecnologia</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim earum
-          perferendis pariatur sint doloremque corporis magni molestias quidem
-          obcaecati facilis non nulla ipsa praesentium beatae, maiores provident
-          ex quibusdam sequi.
-        </p>
-      </div>
-      <div class="header_right">
-        <img src="./assets/profile.jpg" alt="Pricila Mayara" />
-      </div>
-    </header>
-    <section class="middle">
-      <section class="experience">
-        <h1>Work Experience</h1>
-        <div class="job_1">
-          <h2>Auxiliar de Logística</h2>
-          <h3>09/2020 - Atual | NOVO MIX ATACADO DE ALIMENTOS</h3>
-          <ul>
-            <li>Atividade 1</li>
-            <li>Atividade 2</li>
-            <li>Atividade 3</li>
-            <li>Atividade 4</li>
-            <li>Atividade 5</li>
-          </ul>
+    <main class="main">
+      <header class="header_top">
+        <div class="header_left">
+          <h1>Pricila Mayara Rocha dos Santos</h1>
+          <h2>Estudante de Tecnologia</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim earum
+            perferendis pariatur sint doloremque corporis magni molestias quidem
+            obcaecati facilis non nulla ipsa praesentium beatae, maiores
+            provident ex quibusdam sequi.
+          </p>
         </div>
-        <div class="job_2">
-          <h2>Aprendiz Administrativo Logístico</h2>
-          <h3>01/2018 - 06/2019 | KIMBERLY-CLARK</h3>
-          <ul>
-            <li>Atividade 1</li>
-            <li>Atividade 2</li>
-            <li>Atividade 3</li>
-            <li>Atividade 4</li>
-            <li>Atividade 5</li>
-          </ul>
+        <div class="header_right">
+          <img src="./assets/profile.jpg" alt="Pricila Mayara" />
+        </div>
+      </header>
+      <section class="middle">
+        <section class="experience">
+          <h1>Work Experience</h1>
+          <div class="job_1">
+            <h2>Auxiliar de Logística</h2>
+            <h3>09/2020 - Atual | NOVO MIX ATACADO DE ALIMENTOS</h3>
+            <ul>
+              <li>Atividade 1</li>
+              <li>Atividade 2</li>
+              <li>Atividade 3</li>
+              <li>Atividade 4</li>
+              <li>Atividade 5</li>
+            </ul>
+          </div>
+          <div class="job_2">
+            <h2>Aprendiz Administrativo Logístico</h2>
+            <h3>01/2018 - 06/2019 | KIMBERLY-CLARK</h3>
+            <ul>
+              <li>Atividade 1</li>
+              <li>Atividade 2</li>
+              <li>Atividade 3</li>
+              <li>Atividade 4</li>
+              <li>Atividade 5</li>
+            </ul>
+          </div>
+        </section>
+        <div class="line"></div>
+        <div>
+          <section class="education">
+            <h1>Education</h1>
+            <div class="education_1">
+              <h2>Engenharia de Produção</h2>
+              <h3>04/2017 - Atual | UNINTER</h3>
+              <ul>
+                <li>Disciplina 1</li>
+                <li>Disciplina 2</li>
+                <li>Disciplina 3</li>
+                <li>Disciplina 4</li>
+                <li>Disciplina 5</li>
+              </ul>
+            </div>
+          </section>
+          <section class="skills">
+            <h1>Skills</h1>
+            <div class="skills_1">
+              <ul>
+                <li>Proatividade</li>
+                <li>Trabalho em equipe</li>
+                <li>Criatividade</li>
+                <li>Disciplina</li>
+                <li>Comunicação</li>
+              </ul>
+            </div>
+          </section>
         </div>
       </section>
-      <div class="line"></div>
-      <div>
-        <section class="education">
-          <h1>Education</h1>
-          <div class="education_1">
-            <h2>Engenharia de Produção</h2>
-            <h3>04/2017 - Atual | UNINTER</h3>
-            <ul>
-              <li>Disciplina 1</li>
-              <li>Disciplina 2</li>
-              <li>Disciplina 3</li>
-              <li>Disciplina 4</li>
-              <li>Disciplina 5</li>
-            </ul>
-          </div>
-        </section>
-        <section class="skills">
-          <h1>Skills</h1>
-          <div class="skills_1">
-            <ul>
-              <li>Proatividade</li>
-              <li>Trabalho em equipe</li>
-              <li>Criatividade</li>
-              <li>Disciplina</li>
-              <li>Comunicação</li>
-            </ul>
-          </div>
-        </section>
-      </div>
-    </section>
+    </main>
   </body>
 </html>
