--- a/index.html
+++ b/index.html
@@ -81,5 +81,23 @@
         </div>
       </section>
     </main>
+    <footer>
+      <div class="ref">
+        <h1>REFERÊNCIAS</h1>
+        <p><strong>Pricila Mayara</strong>, Product Manager</p>
+        <p>Endereço tal LTDA.</p>
+        <p>55-71-9-8807-8087</p><br>
+        <p><strong>Diego Almeida</strong>, Product Manager</p>
+        <p>Endereço tal LTDA.</p>
+        <p>55-71-9-8807-8087</p>
+      </div>
+      <div class="line2"></div>
+      <div class="contact">
+        <h1>CONTATO</h1>
+        <p>1200 North Street</p>
+        <p>New York City, NY</p>
+        <p>55-71-9-8807-8087</p>
+        <p>pricilamayara@gmail.com</p>
+    </footer>
   </body>
 </html>
