Ajuste do Footer

--- a/index.html
+++ b/index.html
@@ -91,13 +91,13 @@
         <p>Endereço tal LTDA.</p>
         <p>55-71-9-8807-8087</p>
       </div>
-      <div class="line2"></div>
       <div class="contact">
         <h1>CONTATO</h1>
         <p>1200 North Street</p>
         <p>New York City, NY</p>
         <p>55-71-9-8807-8087</p>
         <p>pricilamayara@gmail.com</p>
+      </div>
     </footer>
   </body>
 </html>
