alteração de informações (header e main), inclusão de mídias e formatação de texto

--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
       <header class="header_top">
         <div class="header_left">
           <h1>Pricila Mayara Rocha dos Santos</h1>
-          <h2>Estudante de Tecnologia</h2>
+          <h2>Estudante de Engenharia de Produção e Tecnologia</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim earum
-            perferendis pariatur sint doloremque corporis magni molestias quidem
-            obcaecati facilis non nulla ipsa praesentium beatae, maiores
-            provident ex quibusdam sequi.
+            Nascida em 1996 (Alagoinhas-Ba), como parte de uma família tradicional. Evangélica, casada, estudante 
+            e exploradora de novos ambientes e culturas. Amante de livros, séries e filmes, assim como design gráfico, 
+            personalização e desenhos. Bom humor e disposição são minhas fortes características, além de outras surpresas.    
           </p>
         </div>
         <div class="header_right">
@@ -25,49 +24,76 @@
         </div>
       </header>
       <section class="middle">
-        <section class="experience">
-          <h1>Work Experience</h1>
+        <section class="work_experience">
+          <h1>Experiências Profissionais:</h1>
           <div class="job_1">
             <h2>Auxiliar de Logística</h2>
-            <h3>09/2020 - Atual | NOVO MIX ATACADO DE ALIMENTOS</h3>
+            <h3>07/2021 - Atual | NOVO MIX ATACADO DE ALIMENTOS</h3>
             <ul>
-              <li>Atividade 1</li>
-              <li>Atividade 2</li>
-              <li>Atividade 3</li>
-              <li>Atividade 4</li>
-              <li>Atividade 5</li>
+              <li>Sistemas WMS / RMS</li>
+              <li>FullSoft</li>
+              <li>Agendamento de cargas</li>
+              <li>Tratativas de Notas Fiscais</li>
             </ul>
           </div>
+          
           <div class="job_2">
-            <h2>Aprendiz Administrativo Logístico</h2>
+            <h2>Estagiária de Logística</h2>
+            <h3>09/2020 - 06/2021 | NOVO MIX ATACADO DE ALIMENTOS</h3>
+            <ul>
+              <li>Sistemas WMS / RMS</li>
+              <li>Controle de Validades</li>
+              <li>Endereçamento</li>
+              <li>Atendimento em GLPI</li>
+              <li>Auditoria / Ajuste de estoque</li>
+            </ul>
+          </div>
+          <div class="job_3">
+            <h2>Aprendiz Aux. Administrativo em Logística</h2>
             <h3>01/2018 - 06/2019 | KIMBERLY-CLARK</h3>
             <ul>
-              <li>Atividade 1</li>
-              <li>Atividade 2</li>
-              <li>Atividade 3</li>
-              <li>Atividade 4</li>
-              <li>Atividade 5</li>
+              <li>Controle de EPI's e EPC's de Colaboradores</li>
+              <li>Atendimento em Almoxarifado</li>
+              <li>Controle de Requisições</li>
+              <li>Auditoria de estoque</li>
+              <li>DDS</li>
+            </ul>
+          </div>
+          <div class="job_4">
+            <h2>Aprendiz Aux. Administrativo em Controladoria</h2>
+            <h3>09/2015 - 09/2017 | UNIGEL PLÁSTICOS / ACRINOR</h3>
+            <ul>
+              <li>Lançamento de DACTE</li>
+              <li>Pesagem / Liberação de caminhões</li>
+              <li>Arquivo</li>
+            </ul>
+          </div>
+          <div class="job_5">
+            <h2>Balconista e Design Gráfico</h2>
+            <h3>06/2015 - 08/2015 | MAGIC LAB - IMPRESSÃO DIGITAL</h3>
+            <ul>
+              <li>Seleção de imagens para revelação</li>
+              <li>Edição de imagens</li>
+              <li>Criação de artes para personalização</li>
             </ul>
           </div>
         </section>
         <div class="line"></div>
-        <div>
+        <div class="right">
           <section class="education">
-            <h1>Education</h1>
+            <h1>Educação:</h1>
             <div class="education_1">
-              <h2>Engenharia de Produção</h2>
-              <h3>04/2017 - Atual | UNINTER</h3>
               <ul>
-                <li>Disciplina 1</li>
-                <li>Disciplina 2</li>
-                <li>Disciplina 3</li>
-                <li>Disciplina 4</li>
-                <li>Disciplina 5</li>
+                <li><h3>Inglês Intermediário - 2015 A 2018 | FISK</h3></li>
+                <li><h3>Computação Gráfica - 2011 A 2015 | SAGA</h3></li>
+                <li><h3>Turismo e Hospedagem - 2015 A 2018 | CECC</h3></li>
+                <li><h3>Profissionalizante em Inspetor de Qualidade - 2012 - 2013 | Senai</h3></li>
+                <li><h3>Gestão Empresarial - 2011 A 2012 | Capacitta Cursos</h3></li>
               </ul>
             </div>
           </section>
           <section class="skills">
-            <h1>Skills</h1>
+            <h1>Habilidades:</h1>
             <div class="skills_1">
               <ul>
                 <li>Proatividade</li>
@@ -75,6 +101,18 @@
                 <li>Criatividade</li>
                 <li>Disciplina</li>
                 <li>Comunicação</li>
+              </ul>
+            </div>
+          </section>
+          <section class="skills2">
+            <h1>Conhecimentos:</h1>
+            <div class="skills_2">
+              <ul>
+                <li><img src="./assets/logo-photoshop-original.png" alt="Photoshop"></li>
+                <li><img src="./assets/illustrator.jpg" alt="Illustrator"></li>
+                <li><img src="./assets/HTML5_Badge.svg.png" alt="HTML5"></li>
+                <li><img src="./assets/logo-css-3-2048.png" alt="CSS3"></li>
+                <li><img src="./assets/logo-javascript-1024.png" alt="JavaScript"></li>
               </ul>
             </div>
           </section>
